[gd_scene load_steps=24 format=3 uid="uid://b2iwuk2gndgr4"]

[ext_resource type="Script" uid="uid://bsebhi65dqn0d" path="res://Player/Player.gd" id="1_cxr5p"]
[ext_resource type="Material" uid="uid://vyxvhhf0hon" path="res://Player/PlayerMat.tres" id="2_tdg3f"]
[ext_resource type="Script" uid="uid://oh5umyrnpcif" path="res://addons/StateMachine/StateMachine/state_machine.gd" id="3_dtqjt"]
[ext_resource type="Script" uid="uid://ofgysyk2gry1" path="res://Player/States/IdleState.gd" id="4_5ncpa"]
[ext_resource type="Script" uid="uid://bxtyxib10gxlu" path="res://Player/States/MoveState.gd" id="5_wi0c6"]
[ext_resource type="Script" uid="uid://f8hyo1x33o6j" path="res://Player/States/AttackState.gd" id="6_tdg3f"]
[ext_resource type="PackedScene" uid="uid://b8finywqxy7il" path="res://Player/Player1.blend" id="6_v0k0e"]
[ext_resource type="AudioStream" uid="uid://b6kdy1orqnwqu" path="res://Player/Whoosh.ogg" id="7_j23h2"]
[ext_resource type="AudioStream" uid="uid://bwynnhmvnxykb" path="res://PickUps/FireShoot.ogg" id="8_0j2ni"]
[ext_resource type="AudioStream" uid="uid://jk1e673eyin2" path="res://Player/Hit2.ogg" id="8_s1rgi"]
[ext_resource type="Material" uid="uid://g2rjptubc2j5" path="res://Enemies/EnemyMat.tres" id="9_j23h2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_js7pq"]
radius = 0.35

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bcbcq"]
radius = 0.35

[sub_resource type="PrismMesh" id="PrismMesh_bcbcq"]
size = Vector3(0.2, 0.2, 0.5)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cxr5p"]
radius = 0.15
height = 0.75

[sub_resource type="Animation" id="Animation_cxr5p"]
resource_name = "Attack"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Attack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Attack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.209, 0.285, -0.185273, 0.025, 1, 0.209, 0.285, -0.57575, 0.25, 1, 0.209, 0.285, -0.57575)
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_attack_ended"
}]
}

[sub_resource type="Animation" id="Animation_tdg3f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Attack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Attack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.208871, 0.285264, -0.417642)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dtqjt"]
_data = {
&"Attack": SubResource("Animation_cxr5p"),
&"RESET": SubResource("Animation_tdg3f")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s1rgi"]
radius = 0.6

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_s1rgi"]
random_pitch = 1.15
streams_count = 1
stream_0/stream = ExtResource("7_j23h2")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_v0k0e"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("8_0j2ni")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_j23h2"]
random_pitch = 1.15
streams_count = 1
stream_0/stream = ExtResource("8_s1rgi")

[sub_resource type="BoxMesh" id="BoxMesh_s1rgi"]
size = Vector3(1, 0.1, 1)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("debug_target", "fire_sfx", "state_machine", "wall_check")]
collision_layer = 2
collision_mask = 57
script = ExtResource("1_cxr5p")
debug_target = NodePath("DebugTarget")
fire_sfx = NodePath("FireSFX")
state_machine = NodePath("StateMachine")
wall_check = NodePath("WallCheck")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "character")]
script = ExtResource("3_dtqjt")
initial_state = NodePath("IdleState")
character = NodePath("..")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_5ncpa")

[node name="MoveState" type="Node" parent="StateMachine"]
script = ExtResource("5_wi0c6")

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("6_tdg3f")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_js7pq")

[node name="WallCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -1)

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_bcbcq")
surface_material_override/0 = ExtResource("2_tdg3f")

[node name="Face" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-4.37114e-08, 0, 1, -1, -4.37114e-08, -4.37114e-08, 4.37114e-08, -1, 0, 2.6502e-08, 0.606294, -0.314454)
mesh = SubResource("PrismMesh_bcbcq")
surface_material_override/0 = ExtResource("2_tdg3f")

[node name="Attack" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.208871, 0.285264, -0.417642)
visible = false
mesh = SubResource("CapsuleMesh_cxr5p")
surface_material_override/0 = ExtResource("2_tdg3f")

[node name="Player1" parent="." instance=ExtResource("6_v0k0e")]

[node name="Skeleton3D" parent="Player1/Armature" index="0"]
bones/1/rotation = Quaternion(-0.158178, -0.00557279, 0.0507046, 0.986092)
bones/2/rotation = Quaternion(0.065855, 0.00359655, -0.0175488, 0.997668)
bones/3/rotation = Quaternion(0.0795447, 0.00102215, -0.0178844, 0.99667)
bones/4/rotation = Quaternion(-0.00500327, -0.000305355, -0.017911, 0.999827)
bones/5/rotation = Quaternion(-0.495167, 0.00869142, -0.0156638, 0.868613)
bones/8/rotation = Quaternion(-0.374631, 0.577694, -0.277113, 0.670172)
bones/9/rotation = Quaternion(0.103583, 0.0523588, -0.383918, 0.916044)
bones/10/rotation = Quaternion(-0.00217727, -0.206551, 0.139572, 0.968427)
bones/12/rotation = Quaternion(-0.566375, 0.15525, 0.293181, 0.754428)
bones/15/rotation = Quaternion(-0.392031, -0.0356621, 0.0580083, 0.917429)
bones/16/rotation = Quaternion(-0.235789, -0.0342867, -0.0626235, 0.969178)
bones/18/rotation = Quaternion(-0.300492, 0.147936, -0.187039, 0.923491)
bones/19/rotation = Quaternion(-0.135709, -0.0247335, -0.0668342, 0.988182)
bones/21/rotation = Quaternion(0.015167, 0.191666, -0.37388, 0.90733)
bones/22/rotation = Quaternion(-0.154712, 0.0110775, -0.0594219, 0.986109)
bones/24/rotation = Quaternion(0.227429, 0.248726, -0.786379, 0.517706)
bones/25/rotation = Quaternion(-0.468627, -0.416615, 0.345709, 0.698073)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(0.103583, -0.0523588, 0.383918, 0.916044)
bones/26/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(0.044848, 0.0204248, -0.175818, 0.983188)
bones/27/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(-0.566375, -0.15525, -0.293181, 0.754428)
bones/30/rotation = Quaternion(-0.140162, -0.0128197, 0.0270211, 0.989677)
bones/32/rotation = Quaternion(-0.392031, 0.0356621, -0.0580083, 0.917429)
bones/33/rotation = Quaternion(-0.235789, 0.0342867, 0.0626235, 0.969178)
bones/35/rotation = Quaternion(-0.300492, -0.147936, 0.187039, 0.923491)
bones/36/rotation = Quaternion(-0.135709, 0.0247335, 0.0668342, 0.988182)
bones/38/rotation = Quaternion(0.015167, -0.191666, 0.37388, 0.90733)
bones/39/rotation = Quaternion(-0.154712, -0.0110775, 0.0594218, 0.986109)
bones/40/rotation = Quaternion(0.870024, -0.00990478, 0.0174937, 0.492599)
bones/41/rotation = Quaternion(-0.03627, 0.00971079, 0.0176021, 0.99914)
bones/42/rotation = Quaternion(-0.0301989, 0.00851975, 0.0182085, 0.999342)
bones/43/rotation = Quaternion(-0.0201225, 0.00759277, 0.0186141, 0.999595)
bones/46/rotation = Quaternion(0.735763, 0.0939344, -0.557216, 0.373283)
bones/47/rotation = Quaternion(-0.811239, 0.0392905, -0.0348994, 0.582348)
bones/48/rotation = Quaternion(0.492609, -0.0599742, 0.0134822, 0.868077)
bones/51/rotation = Quaternion(0.144255, 0.164704, 0.515024, 0.828742)
bones/53/rotation = Quaternion(0.136561, 0.0369621, 0.0338348, 0.989364)
bones/55/rotation = Quaternion(0.168971, -0.115761, -0.370263, 0.906065)
bones/58/rotation = Quaternion(0.763222, -0.0582017, 0.577622, 0.283651)
bones/59/rotation = Quaternion(-0.913856, -0.0122997, 0.0301225, 0.404733)
bones/60/rotation = Quaternion(0.617758, 0.0855077, -0.0430405, 0.78052)
bones/63/rotation = Quaternion(0.170066, -0.125439, -0.457834, 0.863557)
bones/65/rotation = Quaternion(0.120441, 0.00848356, 0.0321785, 0.992163)
bones/67/rotation = Quaternion(0.122106, 0.126678, 0.432692, 0.884206)

[node name="PlayerBody" parent="Player1/Armature/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("2_tdg3f")

[node name="AnimationPlayer" parent="Player1" index="6"]
autoplay = "Idle"

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dtqjt")
}

[node name="FirePowerTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AttackCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.403641)
shape = SubResource("CylinderShape3D_s1rgi")
target_position = Vector3(0, 0, 0)
max_results = 7
collision_mask = 6

[node name="AttackSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_s1rgi")
volume_db = -15.0
max_polyphony = 5
bus = &"SFX"

[node name="FireSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_v0k0e")
bus = &"SFX"

[node name="HitSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_j23h2")
volume_db = -15.0
max_polyphony = 6
bus = &"SFX"

[node name="DebugTarget" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
top_level = true
visible = false
mesh = SubResource("BoxMesh_s1rgi")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("9_j23h2")

[editable path="Player1"]
